# model-compose

./: .gitignore  CONTRIBUTING.md  README.ko.md  README.md  README.zh-cn.md  kura.toml  pyproject.toml
.github/workflows/: docs.yml
benchmarks/: .gitignore  README.md  requirements.txt
benchmarks/audio-streaming-pipeline/: README.md  scenario.md
benchmarks/common/: metrics.py  runner.py
docs/: SPEC_OPENAI_AGENTKIT_COMPONENTS.md
docs/guides/: image-handling.md  multi-service-workflows.md
docs/reference/: cli.md  compose.md  websocket.md
docs/specs/: acp-integration-spec.md  agent-component-spec.md  component-process-runtime-spec.md  docker-compose-orchestration-spec.md  dynamic-configuration-management-spec.md  general-queue-dispatcher-spec.md  google-adk-component-spec.md  langchain-memory-component-spec.md
docs/user-guide/: 00-table-of-contents.md  01-getting-started.md  02-core-concepts.md  03-cli-usage.md  04-component-configuration.md  05-writing-workflows.md  06-controller-configuration.md  06-workflow-schema.md  07-controller-configuration.md  07-websocket-interface.md  07-webui-configuration.md  08-local-ai-models.md  08-websocket-interface.md  08-webui-configuration.md  09-local-ai-models.md  09-model-training.md  09-webui-configuration.md  10-external-service-integration.md  10-local-ai-models.md  10-model-training.md  11-external-service-integration.md  11-model-training.md  11-streaming-mode.md  12-streaming-mode.md  (+24 more)
examples/: .gitignore  README.ko.md  README.md  README.zh-cn.md
schemas/: schema.json
tests/: conftest.py  test_cli.py
(+2142 files in other folders)
