[project]
name = "model-compose"
version = "0.4.32"
description = "model-compose: Declarative AI Workflow Orchestrator"
authors = [
    { name = "Hanyeol Cho", email = "hanyeol.cho@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pyyaml",
    "pydantic",
    "python-dotenv",
    "docker",
    "aiohttp",
    "requests",
    "fastapi",
    "websockets",
    "uvicorn",
    "mcp>=1.10.1",
    "ulid",
    "gradio>=6.0.0",
    "Pillow",
    "beautifulsoup4",
    "lxml",
    "async_timeout>=4.0; python_version < '3.11'"
]

[project.scripts]
model-compose = "mindor.cli.compose:compose_command"

[project.urls]
"Homepage" = "https://github.com/hanyeol/model-compose"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mindor.core.controller.runtime.docker" = ["context/*"]
